--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
                 <img src="Img.jpg" alt="Mohd Hamza Abbasi" />
             </div>
             <h1>Mohd Hamza Abbasi</h1>
-            <p class="intro-text">Aspiring Software Developer | Tech Enthusiast | Problem Solver | Coder</p>
+            <p class="intro-text">Aspiring Software Developer | Tech Enthusiast | Problem Solver | Innovater</p>
             <div class="contact-info">
                 <p>Contact: 9336865880 | <a href="mailto:hamzamohd.abbasi@gmail.com">hamzamohd.abbasi@gmail.com</a></p>
                 <p><a href="https://www.linkedin.com/in/mohdhamzaabbasi/">LinkedIn</a> | <a href="https://github.com/mohdhamzaabbasi">GitHub</a></p>
