--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
     <section id="about" class="about-section container">
         <h2>About Me</h2>
-        <p>Hello! I'm Mohd Hamza Abbasi, a dedicated software developer specializing in building web-based applications. My journey in tech has been fueled by a passion for problem-solving and creating user-centric solutions.</p>
+        <p>Hi! I'm Mohd Hamza Abbasi, a dedicated software developer specializing in building web-based applications. My journey in tech has been fueled by a passion for problem-solving and creating user-centric solutions.</p>
     </section>
 
     <section id="skills" class="skills-section container">
